Use java.net.URI.create because java.net.URL is prone to do a name lookup.
Signed-off-by: chenkins <chenkins44@gmail.com>